# surch

./: .gitignore  README.md  Surch.ipynb  app.py  engine.py  inference.py  memory.db  pyproject.toml  requirements.txt  requirements1.txt  surch-cli.py  utils.py
